not showing the cards on the admin board immediately to avoid fetching all the time. Added a button to change last firebase sync time - therefore I get to decide when people get the new data.

--- a/src/other-pages/admin-cards/admin-cards.component.scss
+++ b/src/other-pages/admin-cards/admin-cards.component.scss
@@ -33,15 +33,19 @@ mat-spinner::before {
 
 h2 {
     margin: 20px 0;
+    font-size: large;
 }
 
 input {
     min-height: 20px;
 }
 
+button {
+    margin: 5px;
+}
 
 // button
-button {
+.action-button {
     height: 30px;
     width: 30px;
     margin: 2px;
